--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,6 @@ authors = ["Gray Stanton <gray@graystanton.com>"]
 version = "0.1.0"
 
 [deps]
+BSplines = "488c2830-172b-11e9-1591-253b8a7df96d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
